--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/Scripts/lib/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/Scripts/lib/font-awesome/css/font-awesome.min.css">
     <link rel='stylesheet' href='/Content/app.css' />
+    <!-- Stanley LAI, 301201143 COMP 229 Midterm -->
   </head>
   <body>
 
